<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/card_account_box_background"
    android:padding="16dp">

    <TextView
        android:id="@+id/boxTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account_balance"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:alpha="0.7"/>

    <TextView
        android:id="@+id/boxAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0_00"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_marginTop="4dp"/>

    <Button
        android:id="@+id/btnDeposit"
        android:layout_width="162dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="#971959"
        android:text="@string/deposit"
        android:textColor="@color/white" />

</LinearLayout>