<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#4B0B26">


    <ImageView
        android:layout_width="412dp"
        android:layout_height="122dp"
        android:layout_marginTop="68dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/freebet_games_logo"
        android:src="@drawable/freebet_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/playerId"
        android:layout_width="377dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="244dp"
        android:layout_marginEnd="8dp"
        android:autofillHints="playerId"
        android:background="@drawable/round_edit_text"
        android:hint="@string/enter_your_Id"
        android:inputType="text"
        android:padding="12dp"
        android:radius="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn"
        android:layout_width="377dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="#971959"
        android:color="#971959"
        android:text="@string/connect"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/playerId"
        app:layout_constraintStart_toStartOf="@+id/playerId"
        app:layout_constraintTop_toBottomOf="@+id/playerId" />

</androidx.constraintlayout.widget.ConstraintLayout>

